<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Better Idea</string>
	<string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logo">Logo</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="action_logout">logout</string>
    <string name="action_settings">Settings</string>
    <string name="logo_image">Logo Image</string>
    <string name="add_image">Add Image</string>
    <string name="search_image">Search Image</string>
    <string name="test_text">Ideenmanagement App #1.... Wir haben die Aufgabe bekommen eine native App für die "Mobile" Vorlesung zu erstellen.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_hint">Benutzername</string>
    <string name="password_hint">Passwort</string>
	<string name="new_thema">Neues Thema</string>
	<string name="my_topics">Meine Themen</string>
	<string name="navigation_home">Startseite</string>
	<string name="navigation_mygames">Meine Themen</string>
	<string name="last_ideas">Letzte Ideen</string>
	<string name="label_options">Einstellungen</string>
	<string name="label_language">Sprache</string>
	<string name="search_text">Suchbegriff</string>
</resources>
